--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodecli1",
   "version": "1.0.0",
   "description": "",
-  "main": "src/add-two/add-two.js",
+  "main": "src/add-two-numbers/add-two-numbers.js",
   "scripts": {
     "test": "jest"
   },
