--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "jest": "26.0.0"
+    "jest": "26.0.0",
+    "jest-extended": "0.11.5"
   },
+    "jest": {
+        "setupFilesAfterEnv": [
+            "jest-extended"
+        ]
+    },
   "keywords": [],
   "author": "",
   "license": "ISC"
